[dependencies.icentral-deps]
path = "../icentral-deps"
[dependencies.icentral-mindexed-map]
path = "../icentral-mindexed-map"
[dependencies.icentral-nodeid]
path = "../icentral-nodeid"
[dependencies]
named-item = "0.1.0"
renew-traits = "0.1.0"
[package]
edition = "2021"
name = "icentral-articulation-point-map"
version = "0.1.0"
