[dependencies.icentral-deps]
path = "../icentral-deps"
[dependencies.icentral-color-map]
path = "../icentral-color-map"
[dependencies.icentral-distances]
path = "../icentral-distances"
[dependencies.icentral-errors]
path = "../icentral-errors"
[dependencies.icentral-neighbors]
path = "../icentral-neighbors"
[dependencies.icentral-nodeid]
path = "../icentral-nodeid"
[dependencies.icentral-predecessor-map]
path = "../icentral-predecessor-map"
[dependencies]
named-item = "0.1.0"
renew-traits = "0.1.0"
[package]
edition = "2021"
name = "icentral-articulation-point"
version = "0.1.0"
