[dependencies.icentral-deps]
path = "../icentral-deps"
[dependencies.icentral-bcc]
path = "../icentral-bcc"
[dependencies.icentral-edge]
path = "../icentral-edge"
[dependencies.icentral-edges]
path = "../icentral-edges"
[dependencies.icentral-graph-interface]
path = "../icentral-graph-interface"
[package]
edition = "2021"
name = "icentral-bridge-edges"
version = "0.1.0"
