[dependencies.icentral-deps]
path = "../icentral-deps"
[dependencies.icentral-articulation-point-map]
path = "../icentral-articulation-point-map"
[dependencies.icentral-bcc]
path = "../icentral-bcc"
[dependencies.icentral-brandes]
path = "../icentral-brandes"
[dependencies.icentral-distances]
path = "../icentral-distances"
[dependencies.icentral-edge]
path = "../icentral-edge"
[dependencies.icentral-edges]
path = "../icentral-edges"
[dependencies.icentral-errors]
path = "../icentral-errors"
[dependencies.icentral-graph-interface]
path = "../icentral-graph-interface"
[dependencies.icentral-neighbors]
path = "../icentral-neighbors"
[dependencies.icentral-nodeid]
path = "../icentral-nodeid"
[dependencies.icentral-pair-dependencies]
path = "../icentral-pair-dependencies"
[dependencies.icentral-parents-map]
path = "../icentral-parents-map"
[dependencies.icentral-path-counts]
path = "../icentral-path-counts"
[dependencies.icentral-scores]
path = "../icentral-scores"
[dependencies.icentral-sigmas]
path = "../icentral-sigmas"
[dependencies.icentral-subgraph]
path = "../icentral-subgraph"
[dependencies.icentral-timer]
path = "../icentral-timer"
[dependencies.named-item]
path = "../named-item"
[dependencies.renew-traits]
path = "../renew-traits"
[package]
edition = "2021"
name = "icentral-delta"
version = "0.1.0"
