[dependencies.icentral-deps]
path = "../icentral-deps"
[dependencies.icentral-bcc]
path = "../icentral-bcc"
[dependencies.icentral-bridge-edges]
path = "../icentral-bridge-edges"
[dependencies.icentral-edge]
path = "../icentral-edge"
[dependencies.icentral-edges]
path = "../icentral-edges"
[dependencies.icentral-errors]
path = "../icentral-errors"
[dependencies.icentral-graph-interface]
path = "../icentral-graph-interface"
[dependencies.icentral-nodeid]
path = "../icentral-nodeid"
[package]
edition = "2021"
name = "icentral-gen-rand-edges"
version = "0.1.0"
