[dependencies.icentral-deps]
path = "../icentral-deps"
[dependencies.icentral-articulation-point]
path = "../icentral-articulation-point"
[dependencies.icentral-articulation-point-map]
path = "../icentral-articulation-point-map"
[dependencies.icentral-bcc]
path = "../icentral-bcc"
[dependencies.icentral-brandes]
path = "../icentral-brandes"
[dependencies.icentral-bridge-edges]
path = "../icentral-bridge-edges"
[dependencies.icentral-component]
path = "../icentral-component"
[dependencies.icentral-cycle]
path = "../icentral-cycle"
[dependencies.icentral-delta]
path = "../icentral-delta"
[dependencies.icentral-distances]
path = "../icentral-distances"
[dependencies.icentral-edge]
path = "../icentral-edge"
[dependencies.icentral-edges]
path = "../icentral-edges"
[dependencies.icentral-errors]
path = "../icentral-errors"
[dependencies.icentral-graph-interface]
path = "../icentral-graph-interface"
[dependencies.icentral-mindexed-map]
path = "../icentral-mindexed-map"
[dependencies.icentral-mock]
path = "../icentral-mock"
[dependencies.icentral-muc]
path = "../icentral-muc"
[dependencies.icentral-mucid]
path = "../icentral-mucid"
[dependencies.icentral-mucid-map]
path = "../icentral-mucid-map"
[dependencies.icentral-neighbors]
path = "../icentral-neighbors"
[dependencies.icentral-node-queue]
path = "../icentral-node-queue"
[dependencies.icentral-nodeid]
path = "../icentral-nodeid"
[dependencies.icentral-pair-dependencies]
path = "../icentral-pair-dependencies"
[dependencies.icentral-parents-map]
path = "../icentral-parents-map"
[dependencies.icentral-path-counts]
path = "../icentral-path-counts"
[dependencies.icentral-predecessor-map]
path = "../icentral-predecessor-map"
[dependencies.icentral-scores]
path = "../icentral-scores"
[dependencies.icentral-scratch]
path = "../icentral-scratch"
[dependencies.icentral-sigmas]
path = "../icentral-sigmas"
[dependencies.icentral-timer]
path = "../icentral-timer"
[dependencies.icentral-visit-markers]
path = "../icentral-visit-markers"
[dependencies]
named-item = "0.1.0"
renew-traits = "0.1.0"
[package]
edition = "2021"
name = "icentral-graph"
version = "0.1.0"
