[dependencies.icentral-deps]
path = "../icentral-deps"
[dependencies.icentral-edge]
path = "../icentral-edge"
[dependencies.icentral-neighbors]
path = "../icentral-neighbors"
[dependencies.icentral-nodeid]
path = "../icentral-nodeid"
[dependencies]
renew-traits = "0.1.0"
[package]
edition = "2021"
name = "icentral-label-map"
version = "0.1.0"
