[dependencies.icentral-deps]
path = "../icentral-deps"
[dependencies.icentral-bcc]
path = "../icentral-bcc"
[dependencies.icentral-edges]
path = "../icentral-edges"
[dependencies.icentral-errors]
path = "../icentral-errors"
[dependencies.icentral-graph]
path = "../icentral-graph"
[dependencies.icentral-graph-hash]
path = "../icentral-graph-hash"
[dependencies.icentral-graph-interface]
path = "../icentral-graph-interface"
[dependencies.icentral-nodeid]
path = "../icentral-nodeid"
[package]
edition = "2021"
name = "icentral-largest-bcc"
version = "0.1.0"
