[dependencies.icentral-deps]
path = "../icentral-deps"
[dependencies.icentral-graph-interface]
path = "../icentral-graph-interface"
[dependencies.icentral-nodeid]
path = "../icentral-nodeid"
[dependencies.named-item]
path = "../named-item"
[dependencies.renew-traits]
path = "../renew-traits"
[package]
edition = "2021"
name = "icentral-mock"
version = "0.1.0"
