[dependencies.icentral-deps]
path = "../icentral-deps"
[dependencies.icentral-brandes]
path = "../icentral-brandes"
[dependencies.icentral-conn-vertex-map]
path = "../icentral-conn-vertex-map"
[dependencies.icentral-cycle]
path = "../icentral-cycle"
[dependencies.icentral-edge]
path = "../icentral-edge"
[dependencies.icentral-edges]
path = "../icentral-edges"
[dependencies.icentral-errors]
path = "../icentral-errors"
[dependencies.icentral-graph-interface]
path = "../icentral-graph-interface"
[dependencies.icentral-mucid]
path = "../icentral-mucid"
[dependencies.icentral-mucid-map]
path = "../icentral-mucid-map"
[dependencies.icentral-neighbors]
path = "../icentral-neighbors"
[dependencies.icentral-node-stack]
path = "../icentral-node-stack"
[dependencies.icentral-nodeid]
path = "../icentral-nodeid"
[dependencies.icentral-scores]
path = "../icentral-scores"
[dependencies.icentral-sigmas]
path = "../icentral-sigmas"
[dependencies.icentral-subgraph]
path = "../icentral-subgraph"
[dependencies.icentral-subgraph-map]
path = "../icentral-subgraph-map"
[dependencies.icentral-visit-markers]
path = "../icentral-visit-markers"
[dependencies.named-item]
path = "../named-item"
[dependencies.renew-traits]
path = "../renew-traits"
[package]
edition = "2021"
name = "icentral-muc"
version = "0.1.0"
