[dependencies.icentral-deps]
path = "../icentral-deps"
[dependencies.icentral-graph-interface]
path = "../icentral-graph-interface"
[dependencies.icentral-mindexed-map]
path = "../icentral-mindexed-map"
[dependencies.icentral-mucid]
path = "../icentral-mucid"
[dependencies.icentral-nodeid]
path = "../icentral-nodeid"
[dependencies.renew-traits]
path = "../renew-traits"
[package]
edition = "2021"
name = "icentral-mucid-map"
version = "0.1.0"
